--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.selector {
+    border-radius : 5px;
+    font-size     : 1rem;
+    margin-top    : 1rem;
+    padding       : .6rem;
+}
