--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
@@ -43,4 +43,8 @@
     font-size     : 1rem;
     margin-top    : 1rem;
     padding       : .6rem;
+}
+
+.w-100 {
+  width: 100%;
 }
